--- a/scheduler/app/package.json
+++ b/scheduler/app/package.json
@@ -14,14 +14,14 @@
     "body-parser": "^1.19.0",
     "config": "^3.2.5",
     "cron-parser": "^2.13.0",
-    "csvtojson": "^2.0.10",
+    "csv-parser": "^2.3.2",
     "express": "^4.17.1",
     "i": "^0.3.6",
     "lowdb": "^1.0.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
+    "receive-file": "^2.0.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5",
     "swagger-docs": "^0.0.0-alpha2",
     "swagger-express-router": "^1.0.0",
     "swagger-inputs-validator": "^1.0.8",
